<resources>
    <string name="app_name">Onit</string>
    <string name="new_alarm">New Alarm</string>
    <string name="new_proximity_reminder">New Proximity Reminder</string>
    <string name="new_geofenced_reminder">New Geofenced Reminder</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarm_title">Alarm Title</string>
    <string name="get_ready_time">Select Estimated Get Ready Time</string>
    <string name="enter_location">Enter Location</string>
    <string name="geofenced_reminder_title">Geofenced Reminder Title</string>
    <string name="geofence_reminder_content">Geofence Reminder Content</string>
    <string name="default_radius">Radius (Miles): 1</string>

    <!-- For proximity reminder popup (create & edit) -->
    <string name="create_proximity_reminder">Create New User Proximity Reminder</string>
    <string name="edit_reminder_title">Edit Reminder</string>
    <string name="reminder_title">Title </string>
    <string name="reminder_body">Description</string>
    <string name="target_user">Target</string>
    <string name="reminder_trigger_distance">Trigger Distance (m) </string>
    <string name="submit_button">Submit</string>
    <string name="cancel_button">Cancel</string>
    <string name= "not_ebitable">Target can not be changed</string>
    <!--edit geo-->

    <string name = "address">Address</string>



</resources>