<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_alarm"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_gravity="center"
        android:text="@string/new_alarm"
        />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"/>

    <Button
        android:id="@+id/button_proximity_reminder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:text="@string/new_proximity_reminder"
        android:layout_gravity="center"
         />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"/>

    <Button
        android:id="@+id/button_geofenced_reminder"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"
        android:layout_gravity="center"
        android:text="@string/new_geofenced_reminder"
         />
    <Space
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight=".2"/>

    <Button
        android:id="@+id/loginButton"
        android:text="login"
        android:layout_gravity="center"
        android:layout_weight=".2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"/>

</LinearLayout>