<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userReminderBG"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="371dp"
        android:layout_height="617dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.284"
        tools:ignore="MissingClass">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="364dp"
            android:layout_height="598dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/editUserBody"
                android:layout_width="199dp"
                android:layout_height="41dp"
                android:layout_marginTop="24dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.853"
                app:layout_constraintStart_toEndOf="@+id/popupUserBody"
                app:layout_constraintTop_toBottomOf="@+id/editeUserTitle" />

            <TextView
                android:id="@+id/popupUserBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="56dp"
                android:text="@string/reminder_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupUserTitle" />

            <Button
                android:id="@+id/editUserCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="56dp"
                android:text="@string/cancel_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.246"
                app:layout_constraintStart_toEndOf="@+id/editUserSubmit"
                app:layout_constraintTop_toBottomOf="@+id/distanceCheck" />

            <Button
                android:id="@+id/editUserSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="69dp"
                android:text="@string/submit_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupUser" />

            <TextView
                android:id="@+id/popupUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="144dp"
                android:text="@string/reminder_trigger_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupUserTarget" />

            <TextView
                android:id="@+id/popupUserTarget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="44dp"
                android:layout_marginTop="64dp"
                android:text="@string/target_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupUserBody" />

            <TextView
                android:id="@+id/popupUserTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="40dp"
                android:text="@string/reminder_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <TextView
                android:id="@+id/editUserTarget"
                android:layout_width="199dp"
                android:layout_height="43dp"
                android:layout_marginTop="48dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.824"
                app:layout_constraintStart_toEndOf="@+id/popupUserTarget"
                app:layout_constraintTop_toBottomOf="@+id/editUserBody" />

            <EditText
                android:id="@+id/editeUserTitle"
                android:layout_width="173dp"
                android:layout_height="41dp"
                android:layout_marginTop="32dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.658"
                app:layout_constraintStart_toEndOf="@+id/popupUserTitle"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/distanceCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="92dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserTarget"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/editUserDistance"
                    android:layout_width="180dp"
                    android:layout_height="73dp"
                    android:layout_marginTop="0dp"
                    android:ems="10"
                    android:enabled="false"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/popupUser"
                    app:layout_constraintTop_toBottomOf="@+id/editUserTarget" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/edit_reminder_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="179dp"
                android:layout_height="17dp"
                android:layout_marginTop="16dp"
                android:text="@string/not_ebitable"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.891"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editUserTarget" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>