<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/createProxBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="392dp"
        android:layout_height="697dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="392dp"
            android:layout_height="683dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/createTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <Button
                android:id="@+id/createProxSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="68dp"
                android:layout_marginTop="48dp"
                android:text="@string/submit_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintVertical_bias="0.791" />

            <EditText
                android:id="@+id/createBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="36dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/createTitle" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="92dp"
                android:text="@string/reminder_trigger_distance"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <Button
                android:id="@+id/createProxCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toEndOf="@+id/createProxSubmit"
                app:layout_constraintTop_toBottomOf="@+id/distanceCheck"
                app:layout_constraintVertical_bias="0.789" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/targetCheck"
                android:layout_width="247dp"
                android:layout_height="95dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createBody"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/createTarget"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintTop_toBottomOf="@+id/createBody" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="84dp"
                android:text="@string/target_user"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="232dp"
                android:layout_height="25dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_proximity_reminder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="76dp"
                android:text="@string/reminder_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="52dp"
                android:layout_height="31dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="68dp"
                android:text="@string/reminder_title"
                app:layout_constraintEnd_toStartOf="@+id/createTitle"
                app:layout_constraintHorizontal_bias="0.03"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView9" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/distanceCheck"
                android:layout_width="247dp"
                android:layout_height="95dp"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/targetCheck"
                tools:ignore="MissingConstraints">

                <EditText
                    android:id="@+id/createDistance"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:ems="10"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>