<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editGeoBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:layout_width="400dp"
        android:layout_height="719dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <EditText
                android:id="@+id/geoEditTitle"
                android:layout_width="191dp"
                android:layout_height="48dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.562"
                app:layout_constraintStart_toEndOf="@+id/popupGeoTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popupGeoTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="52dp"
                android:text="@string/reminder_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/popupGeoDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:text="@string/reminder_trigger_distance"
                app:layout_constraintEnd_toStartOf="@+id/geoEditDistance"
                app:layout_constraintHorizontal_bias="0.444"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupGeoBody" />

            <Button
                android:id="@+id/editGeoCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/cancel_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.542"
                app:layout_constraintStart_toEndOf="@+id/editGeoSubmit"
                app:layout_constraintTop_toBottomOf="@+id/mapView"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/geoEditBody"
                android:layout_width="192dp"
                android:layout_height="44dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="28dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintStart_toEndOf="@+id/popupGeoBody"
                app:layout_constraintTop_toBottomOf="@+id/geoEditTitle" />

            <TextView
                android:id="@+id/geoEditLocation"
                android:layout_width="206dp"
                android:layout_height="32dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="68dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toEndOf="@+id/popupGeoLocation"
                app:layout_constraintTop_toBottomOf="@+id/geoEditDistance" />

            <TextView
                android:id="@+id/popupGeoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="76dp"
                android:text="@string/address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupGeoDistance" />

            <TextView
                android:id="@+id/popupGeoBody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="60dp"
                android:text="@string/reminder_body"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popupGeoTitle" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/edit_reminder_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.467"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapView"
                android:layout_width="374dp"
                android:layout_height="310dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.384"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/geoEditLocation" />

            <Button
                android:id="@+id/editGeoSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:text="@string/submit_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mapView" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/popupZoomOut"
                android:layout_width="54dp"
                android:layout_height="47dp"
                android:clickable="true"
                app:layout_constraintBottom_toBottomOf="@+id/mapView"
                app:layout_constraintEnd_toEndOf="@+id/mapView"
                app:layout_constraintHorizontal_bias="0.031"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/mapView"
                app:layout_constraintVertical_bias="0.954"
                app:srcCompat="@drawable/zoom_out" />

            <TextView
                android:id="@+id/geoEditDistance"
                android:layout_width="171dp"
                android:layout_height="31dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="64dp"
                android:inputType="textPersonName"
                android:text="Name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/geoEditBody" />

            <SeekBar
                android:id="@+id/editDistanceSeekbar"
                android:layout_width="365dp"
                android:layout_height="23dp"
                android:max="4"
                android:progress="1"
                app:layout_constraintBottom_toTopOf="@+id/mapView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.514"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/geoEditDistance"
                app:layout_constraintVertical_bias="0.226" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>